Alignment fix for #900

--- a/modules/editor/web/css/ballerina-file-editor.css
+++ b/modules/editor/web/css/ballerina-file-editor.css
@@ -585,5 +585,7 @@
     padding: 0;
     line-height:20px;
 }
-
+.jstree-anchor {
+    padding: 2px 4px 0 1px;
+}
 /** End of Struct view CSS **/
